<resources>
    <string name="app_name">CurrencyApp-BanqMasr</string>

    <string name="error_unknown">Unknown error</string>

    <string name="error_connection_timeout">An error occurred during connection .. Please try again later</string>
    <string name="error_check_your_internet_connection">Please check your internet connection</string>
    <string name="currency_converter_screen">Currency Converter</string>
    <string name="historical_rates_screen">Historical Rates</string>
    <string name="from_currency">From</string>
    <string name="to_currency">To</string>
    <string name="convert">Convert</string>
    <string name="amount">Amount</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="details">Details</string>
    <string name="rate">Rate</string>
    <string name="historical_rate_format"><b>Historical rates</b> (%s, %s) | <b>3 days</b></string>
    <string name="conversion_rate_for_popular_currencies">Conversion rate for popular currencies (%s)</string>
</resources>
