<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.hassanmohammed.currencyapp_banqmasr.core.utils.CurrencyUtilsKt" />

        <variable
            name="currencyViewModel"
            type="com.hassanmohammed.currencyapp_banqmasr.presentation.viewmodel.currency.CurrencyConvertViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.fragments.currencyconverter.CurrencyConverterFragment">

            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:indeterminateTint="?colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:visibleGone="@{!currencyViewModel.uiState.loading}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/convert_btn" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/base_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/from_currency"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/base_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:freezesText="false"
                    android:inputType="none"
                    android:labelFor="@id/base_input_layout"
                    app:setDefaultIndex="@{0}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/swap_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:rotation="90"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_compare_arrows_24"
                android:tint="?colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/base_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/other_currency_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/to_currency"
                app:layout_constraintEnd_toEndOf="@+id/base_input_layout"
                app:layout_constraintStart_toStartOf="@+id/base_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/swap_btn">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/other_currency_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:freezesText="false"
                    android:inputType="none"
                    app:setDefaultIndex="@{1}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_text_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/amount"
                app:helperText="Default amount = 1"
                app:layout_constraintEnd_toEndOf="@+id/other_currency_input_layout"
                app:layout_constraintStart_toStartOf="@+id/other_currency_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/other_currency_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/convert_btn"
                android:layout_width="0dp"
                app:disable="@{currencyViewModel.uiState.loading}"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:inputType="numberDecimal"
                android:text="@string/convert"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="@+id/other_currency_input_layout"
                app:layout_constraintStart_toStartOf="@+id/other_currency_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/amount_text_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/converted_amount"
                app:layout_constraintEnd_toEndOf="@+id/convert_btn"
                app:layout_constraintStart_toStartOf="@+id/convert_btn"
                app:layout_constraintTop_toBottomOf="@+id/convert_btn">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:text='@{String.format("%,.2f", currencyViewModel.uiState.data.amount)}' />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/details_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/details"
                android:textAllCaps="false"
                app:backgroundTint="#009688"
                app:cornerRadius="30dp"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
